--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,16 @@
         <meta charset = "UTF-8">
         <title>Lasagna</title>
     </head>
-    
+
     <body>
         <h1>Lasagna</h1>
+        <center><img src = "https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" 
+            alt = "AllRecipe's Photo of Lasagna">
+            <br>
+            <p>The Allrecipes community adores this lasagna recipe because it's
+                incredibly customizable, so you can easily alter the ingredient
+                list to suit your needs.</p>
+        </center>
     </body>
 
 </html>
